Fix service location dialog overflow on mobile. (#2959)

--- a/themes/finna2/less/finna/organisation-info.less
+++ b/themes/finna2/less/finna/organisation-info.less
@@ -458,7 +458,7 @@
                         margin-bottom: 1rem;
 
                         .service-type-container {
-                            flex: 0 1 60%;
+                            flex: 1 1 60%;
                         }
                         .service-location-container {
                             min-width: 150px;
