--- a/themes/finna2/less/finna/select-a11y.less
+++ b/themes/finna2/less/finna/select-a11y.less
@@ -101,6 +101,10 @@
   border: 1px solid @dropdown-border;
   .box-shadow(0 6px 12px rgba(0, 0, 0, .275));
   background: @gray-ultralight;
+  font-size: 16px; // Avoid automatic zoom-in on mobile.
+  @media only screen and (min-width : 480px) {
+    font-size: 1em;
+  }
 }
 .select-a11y__input {
   width: 100%;
